--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
+body {
+    background: rgba(255,252,127,1);
+}
+
 h1 {
     font-family: sans-serif;
     font-size: x-large;
-    background: black;
-    color: white;
+    background: rgba(241,214,147,1);
+    color: black;
     padding-left: 10px;
 }
 
 a {
-    font-family: cursive, sans-serif;
+    font-family: sans-serif;
 }
